--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "jest": "^22.4.3",
+    "jsdom": "11.11.0",
     "mkdirp": "^0.5.1",
     "nodemon": "^1.17.2",
     "puppeteer": "^1.5.0",
